@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Our Musicians | Crescendo Initiative</title>
+  <title>Our Musicians | Crescendo</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>/* mini overrides so it matches your site */
-    :root{--primary-red:#2E5BBA;--accent-orange:#FF6B35;--bg-light:#f8fafc;}
+    :root{--primary-red:#D4A44A;--accent-orange:#666;--bg-light:#0F0F0F;}
     body{background:var(--bg-light);font-family:'Inter',sans-serif;color:#1a1a1a;}
     .container{max-width:1200px;margin:0 auto;padding:2rem;}
     h1{font-family:'Playfair Display',serif;font-size:3rem;margin-bottom:1rem;color:var(--primary-red);}
@@ -23,7 +23,7 @@
 <body>
   <div class="container">
     <a href="index.html" class="back-btn"><i class="fas fa-arrow-left"></i> Back to Home</a>
-    <h1>Our Musicians</h1>
+    <h1 style="color: #F2E6C9;">Our Musicians</h1>
     <p>Meet the 32 student-artists who bring joy to senior communities across North Georgia.</p>
 
     <div class="musician-grid">
