@@ -9,8 +9,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
-    :root{--primary-red:#2E5BBA;--accent-orange:#FF6B35;--bg-light:#f8fafc;}
-    body{background:var(--bg-light);font-family:'Inter',sans-serif;color:#1a1a1a;}
+    :root{--primary-red:#F2E6C9;--accent-orange:#D4A44A;--bg-light:#f8fafc;}
+    body{background:var(--bg-light);font-family:'Inter',sans-serif;color:#0F0F0F;}
     .container{max-width:900px;margin:0 auto;padding:2rem;}
     h1{font-family:'Playfair Display',serif;font-size:2.8rem;color:var(--primary-red);}
     .hero-homes{text-align:center;padding:3rem 0;}
@@ -24,7 +24,7 @@
     .gradient{background:linear-gradient(135deg,var(--primary-red) 0%,var(--accent-orange) 100%);}
   </style>
 </head>
-<body>
+<body style="background-color: #1a1a1a;">
   <div class="container">
     <a href="index.html" class="back-btn"><i class="fas fa-arrow-left"></i> Back to Home</a>
 
@@ -34,7 +34,7 @@
     </section>
 
     <section class="why-book">
-      <h2>Why Activity Directors Choose Us</h2>
+      <h2 style="color: #F2E6C9">Why Activity Directors Choose Us</h2>
       <div class="features">
         <div class="feature-card">
           <i class="fas fa-music"></i>
@@ -69,7 +69,7 @@
       </div>
     </section>
 
-    <section class="next-steps">
+    <section class="next-steps" style="color: #F2E6C9;">
       <h2>How to Book</h2>
       <ol>
         <li>Email us your preferred date(s) and time window.</li>
