@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
-    :root{--primary-red:#2E5BBA;--accent-orange:#FF6B35;--bg-light:#f8fafc;}
+    :root{--primary-red:#F2E6C9; --accent-orange:#D4A44A; --bg-light:#0F0F0F;}
     body{background:var(--bg-light);font-family:'Inter',sans-serif;color:#1a1a1a;}
     .container{max-width:900px;margin:0 auto;padding:2rem;}
     h1{font-family:'Playfair Display',serif;font-size:2.8rem;color:var(--primary-red);}
@@ -32,40 +32,40 @@
     <section class="hero-student">
       <h1>Students – Make Music & Make a Difference</h1>
       <p>Perform for senior communities, earn <strong>verified volunteer hours</strong>, unlock <strong>free AP study tools</strong>, and build real leadership experience—no auditions required.</p>
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSd6Xfv5qv4L3oTVNBPDVMf8IW5ibM_KeeHw91f5zVq6A-N52Q/viewform" target="_blank" class="btn-cta-primary">Apply in 60 Seconds</a>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSd6Xfv5qv4L3oTVNBPDVMf8IW5ibM_KeeHw91f5zVq6A-N52Q/viewform" target="_blank" class="btn-cta-primary" style="color: #D4A44A;">Apply in 60 Seconds</a>
     </section>
 
-    <section class="benefits">
-      <h2 style="text-align:center;margin-bottom:.5rem;">Member Benefits</h2>
+    <section class="benefits" >
+      <h2 style="text-align:center; margin-bottom:.5rem; color: #F2E6C9";">Member Benefits</h2>
       <div class="benefit-grid">
         <div class="benefit-card">
           <i class="fas fa-award"></i>
-          <h3>Verified Service Hours</h3>
+          <h3 style="color: #1a1a1a;">Verified Service Hours</h3>
           <p>Official letters, detailed activity logs, and reference letters for college apps, scholarships, and awards.</p>
         </div>
         <div class="benefit-card">
           <i class="fas fa-book-open"></i>
-          <h3>Free AP Human Geography Knowt Subscription</h3>
+          <h3 style="color: #1a1a1a;">Free AP Human Geography Knowt Subscription</h3>
           <p>AI flashcards, practice tests, spaced-repetition tools. <strong>Value: $60/year</strong> (75% attendance required).</p>
         </div>
         <div class="benefit-card">
           <i class="fas fa-gift"></i>
-          <h3>Fundraiser Prizes</h3>
+          <h3 style="color: #1a1a1a;">Fundraiser Prizes</h3>
           <p>Gift cards, music supplies, tech accessories, TCI merch—earned through participation and credit rankings.</p>
         </div>
         <div class="benefit-card">
           <i class="fas fa-trophy"></i>
-          <h3>Recognition & Rankings</h3>
+          <h3 style="color: #1a1a1a;">Recognition & Rankings</h3>
           <p>Member-of-the-Month features, social-media shout-outs, certificates, and priority for officer roles.</p>
         </div>
         <div class="benefit-card">
           <i class="fas fa-user-tie"></i>
-          <h3>Leadership Development</h3>
+          <h3 style="color: #1a1a1a;">Leadership Development</h3>
           <p>Training sessions, mentorship from current officers, and clear pathways to administrative positions.</p>
         </div>
         <div class="benefit-card">
           <i class="fas fa-handshake-angle"></i>
-          <h3>Networking & Community</h3>
+          <h3 style="color: #1a1a1a;">Networking & Community</h3>
           <p>Connect with student leaders, non-profits, and musicians from multiple schools as we expand.</p>
         </div>
       </div>
@@ -74,7 +74,7 @@
     <div class="cta-box gradient">
       <h2>Ready to Perform, Serve & Grow?</h2>
       <p style="color: white;">Spots fill quickly—apply today and start earning verified hours <strong>this month</strong>.</p>
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSd6Xfv5qv4L3oTVNBPDVMf8IW5ibM_KeeHw91f5zVq6A-N52Q/viewform" target="_blank" class="btn-cta-primary">Join Crescendo Now</a>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSd6Xfv5qv4L3oTVNBPDVMf8IW5ibM_KeeHw91f5zVq6A-N52Q/viewform" target="_blank" style="color: #666;" class="btn-cta-primary">Join Crescendo Now</a>
     </div>
   </div>
 </body>
